# CPP-labs

./: .gitattributes  README.md
assignment1/task0/: my_memory_state.pkl
assignment1/task0/tests/: test_part1.py  test_part3.py  test_part5.py
assignment1/task0/xvm/: op.py  run.py  start.py
assignment1/task1/: part1_if_loop_counter.py  part2_recusion_detector.py  part3_constexpr.py
assignment2/task1/: CMakeLists.txt  hint1.txt  mysterious_heap  mysterious_heap.cpp  payload_chunk.pb.cc  payload_chunk.pb.h  payload_chunk.proto
task0/: README_EN.md  README_UK.md  pyproject.toml
task0/tests/: test_part2.py  test_part3.py  test_part4_code.json  test_part5.py  test_part6.py  test_part7.py  test_part8.py  test_part8_code.json  test_part8_code.txt
task0/useful_examples/: cmd_example.py
task0/xvm/: build.py  debugger.py  frame.py  parser.py  run.py  test_runner.py  vm.py  xvmr.py
task0/xvm/enums/: op_code.py
