[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "xvm"
version = "2025.0.0"
authors = [
  {name = "Student Name 1", email = "chichik.anastasiia@lll.kpi.ua"},
  {name = "Oleksii Palamarchuk", email = "palamarchuk.oleksii@lll.kpi.ua"},
]

[project.scripts]
xvm = "xvm.run:run_debug"

[tool.setuptools.packages.find]
where = ["."]
include = ["xvm"]
exclude = ["useful_examples*"]
