[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xvm"
version = "2025.0.0"
authors = [
  {name = "Anastasiia Chichik", email = "chichik.anastasiia@lll.kpi.ua"},
  {name = "Oleksii Palamarchuk", email = "palamarchuk.oleksii@lll.kpi.ua"},
]
dependencies = []
license = {text = "MIT"}
requires-python = ">=3.10"
urls = {repository = "https://github.com/PalamarchukOleksii/CPP-labs"}

[project.optional-dependencies]
dev = ["pytest >= 7.0.0"]

[project.scripts]
xvm-debug = "xvm.run:main"
xvm-build = "xvm.build:main"
xvm-start = "xvm.start:main"
xvm-test = "xvm.test_runner:main"
